Eliminacion de logs en front

--- a/frontend/src/app/admin/gestion-citas/gestion-citas.component.html
+++ b/frontend/src/app/admin/gestion-citas/gestion-citas.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <h2 class="mb-4 text-center">📆 Citas Médicas</h2>
+  <h2 class="mb-4 justify-content-left">📆 Citas Médicas</h2>
 
   <button
     class="btn btn-primary mb-3"
