--- a/frontend/src/app/admin/gestion-medicos/gestion-medicos.component.html
+++ b/frontend/src/app/admin/gestion-medicos/gestion-medicos.component.html
@@ -74,7 +74,13 @@
               required
             />
           </div>
-          <button type="submit" class="btn btn-primary">Registrar</button>
+          <button
+            type="submit"
+            class="btn btn-primary"
+            [disabled]="!nuevoMedico.nombre || !nuevoMedico.especialidad"
+          >
+            Registrar
+          </button>
         </form>
       </div>
     </div>
